--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A simple Node.js function app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
