--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@azure/functions": "^4.0.0"
+  },
   "main": "src/{app.js,function/*.js}"
 }
